@@ -1,5 +1,14 @@
 2011-06-27  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	Implement time command.
+
+	* grub-core/Makefile.core.def (time): New module.
+	* grub-core/commands/time.c: New file.
+	* grub-core/script/parser.y: Remove "time" keyword.
+	* grub-core/script/yylex.l: Likewise.
+
+2011-06-27  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* include/grub/loader.h (grub_loader_unregister_preboot_hook): Export.
 
 2011-06-27  Vladimir Serbinenko  <phcoder@gmail.com>
